ajuste botoes e criação de paginas

--- a/index.html
+++ b/index.html
@@ -14,15 +14,8 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      integrity="sha512-papOTo95OMe7zZGjf9MzzF8ybxgGrzMPvRZKc/B8+Ew2+yjCZaMJXZmWCSqGdf1U7l7i4KrNclkpUJ8FsA+GRg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/assets/styles.css" />
     <title>+PraTi - Lista de Exercícios</title>
   </head>
   <body>
@@ -31,7 +24,7 @@
     >
       <header>
         <img src="/assets/maisprati.png" alt="Logo mais pra ti" width="20%" />
-        <p>Um site com todas listas de exercícios</p>
+        <p><strong>Um site com todas listas de exercícios</strong></p>
       </header>
       <div class="exercices-container">
         <div class="navigation"></div>
@@ -52,7 +45,17 @@
       </div>
       <footer>
         <i class="fa-brands fa-linkedin"></i>
-        Desenvolvido por Leonardo Sehn <i class="fa-brands fa-github"></i>
+        Desenvolvido por Leonardo Sehn
+        <img
+          class="footer-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+          alt="GitHub"
+        />
+        <img
+          class="footer-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-plain.svg"
+          alt="Linkedin"
+        />
       </footer>
     </div>
   </body>
