--- a/lista1.html
+++ b/lista1.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-L+fStXQFtQe8BkQMEoyAJbf1r4YX/fQOiV+azNy6U6QpJALXKwn99+aMzjKJZchvGvVGMNh8qgdAEdx0xHk/6g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
@@ -14,15 +21,8 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      integrity="sha512-papOTo95OMe7zZGjf9MzzF8ybxgGrzMPvRZKc/B8+Ew2+yjCZaMJXZmWCSqGdf1U7l7i4KrNclkpUJ8FsA+GRg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <link rel="stylesheet" href="/styles-exercicios1.css" />
+    <link rel="stylesheet" href="/assets/styles-exercicios1.css" />
     <title>+PraTi - Lista de Exercícios</title>
     <style></style>
   </head>
@@ -32,13 +32,16 @@
     >
       <header>
         <img src="/assets/maisprati.png" alt="Logo mais pra ti" width="20%" />
-        <p>Lista de Exercícios 1 (1-15)</p>
+        <p><strong>Lista de Exercícios 1 (1-15)</strong></p>
       </header>
 
       <div class="exercices-container">
         <div class="navigation"></div>
         <div class="content-container">
-          <a class="btn-exercicio btn btn-dark" href="">
+          <a
+            class="btn-exercicio btn btn-dark"
+            href="/exercicios/lista1/exercicio1.html"
+          >
             Exercício 1 <br />Verificar Par ou Ímpar
           </a>
           <a class="btn-exercicio btn btn-dark" href=""
@@ -83,11 +86,23 @@
           <a class="btn-exercicio btn btn-dark" href=""
             >Exercício 15 <br />Fibonacci</a
           >
+          <a class="nav btn btn-outline-dark" href="/index.html">← Voltar</a>
         </div>
       </div>
 
       <footer>
-        Desenvolvido por Leonardo Sehn <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        Desenvolvido por Leonardo Sehn
+        <img
+          class="footer-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+          alt="GitHub"
+        />
+        <img
+          class="footer-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-plain.svg"
+          alt="Linkedin"
+        />
       </footer>
     </div>
   </body>
